# waifu-tutor

./: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  waifu_tutor_architecture.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_agno_memory.py  test_agno_res.py  test_agno_schema.py  test_agno_stop.py  test_agno_struct.py  test_agno_throw.py  test_agno_tools.py  test_api.py  test_chat_e2e.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  config.py  harness.py
backend/app/api/: auth.py  chat.py  deps.py  documents.py  health.py  not_implemented.py  sessions.py
backend/app/context/: __init__.py  context_builder.py  openviking_client.py  openviking_types.py  session_store.py
backend/app/core/: chat_logging.py  config.py  constants.py  errors.py  security.py  settings.py  text_logging.py  typed_logging.py  viking_logging.py
backend/app/db/: database.py  init_db.py  migrations.py  openviking_client.py  repositories.py  session.py  skills_sync.py
backend/app/hitl/: __init__.py  store.py
backend/app/middleware/: error_handler.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  entities.py
backend/docs/: agent-skills.md  api-notes.md  gmail-web-setup.md  memory-session-file-search.md  outlook-mcp-setup.md  runbook.md  waifu_tutor_architecture.md
backend/scripts/: dev.sh  example.py  smoke_api.sh  test_agno_skill_agent.py  test_skill_cli.py  test_volcengine_chat.py
backend/tests/: __init__.py  test_api_smoke.py
(+241 files in other folders)
