[project]
name = "waifu-tutor-backend"
version = "0.1.0"
description = "Waifu Tutor API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pypdf>=5.0.0",
    "python-docx>=1.0.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
